Add FIXME to make hero list items into anchors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header">
         <h2> Header Logo </h1>
             <ul>
+                <!-- FIXME: turn these into empty anchors -->
                 <li> header link one</li>
                 <li> header link two </li>
                 <li> header link three </li>
@@ -30,21 +31,23 @@
         </div>
         <div class="upper-middle">
             <h3>Some Random Information</h3>
-            <div class="upper-middle-content">
-                <img src="" alt="this is a placeholder for an image">
-                <div> This is some subtext under an image or illustration</div>
-            </div>
-            <div class="upper-middle-content">
-                <img src="" alt="this is a placeholder for an image">
-                <div> This is some subtext under an image or illustration</div>
-            </div>
-            <div class="upper-middle-content">
-                <img src="" alt="this is a placeholder for an image">
-                <div> This is some subtext under an image or illustration</div>
-            </div>
-            <div class="upper-middle-content">
-                <img src="" alt="this is a placeholder for an image">
-                <div> This is some subtext under an image or illustration</div>
+            <div class="upper-middle-panes">
+                <div class="upper-middle-pane">
+                    <img src="" alt="this is a placeholder for an image">
+                    <div> This is some subtext under an image or illustration</div>
+                </div>
+                <div class="upper-middle-pane">
+                    <img src="" alt="this is a placeholder for an image">
+                    <div> This is some subtext under an image or illustration</div>
+                </div>
+                <div class="upper-middle-pane">
+                    <img src="" alt="this is a placeholder for an image">
+                    <div> This is some subtext under an image or illustration</div>
+                </div>
+                <div class="upper-middle-pane">
+                    <img src="" alt="this is a placeholder for an image">
+                    <div> This is some subtext under an image or illustration</div>
+                </div>
             </div>
         </div>
         <div class="lower-middle">
