Change header links to a tags without txt deco

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="header">
         <h2> Header Logo </h1>
             <ul>
-                <!-- FIXME: turn these into empty anchors -->
-                <li> header link one</li>
-                <li> header link two </li>
-                <li> header link three </li>
+                <!-- FIXME: make these into empty anchors -->
+                <li> <a href="">header link one</a> </li>
+                <li> <a href=""> header link two</a> </li>
+                <li> <a href=""> header link three</a> </li>
             </ul>
     </div>
     <div class="content">
