--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         It's a smaller font and the color is lower contrast</div>
                     <button> Sign Up</button>
                 </div>
-                <img src="" alt="this is a placeholder for an image">
+                <img src="https://cdn.pixabay.com/photo/2023/01/06/05/58/mute-swans-7700462__340.jpg" alt="this is a placeholder for an image">
             </div>
         </div>
         <div class="upper-middle">
