--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="lower-middle">
             <div class="lower-middle-content">
                 <div class="quote">
-                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space.
-                    Who knows? All I know is that it looks nice.
+                    "This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space.
+                    Who knows? All I know is that it looks nice."
                 </div>
 
                 <div class="lower-middle-source">
